<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    tools:context=".AddWorkActivity">


    <ImageView
        android:id="@+id/logoPicture"
        android:layout_width="412dp"
        android:layout_height="110dp"
        android:adjustViewBounds="true"

        android:background="#878787"
        android:contentDescription="@string/logo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/workTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleText"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="143dp" />

    <EditText
        android:id="@+id/workTitleFieldButton"
        android:layout_width="263dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/workTitleField"
        android:inputType="text"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/primary_button"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="183dp" />

    <ImageView
        android:id="@+id/workImagePlaceholderPicture"
        android:layout_width="102dp"
        android:layout_height="158dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/logoPicture"
        app:srcCompat="@android:drawable/ic_menu_report_image"
        tools:layout_editor_absoluteX="296dp" />

    <TextView
        android:id="@+id/workAuthorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workAuthorText"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="225dp" />

    <EditText
        android:id="@+id/workAuthorFieldButton"
        android:layout_width="263dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/workAuthorField"
        android:inputType="text"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/primary_button"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="269dp" />

    <TextView
        android:id="@+id/genreSelectText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoryText"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="328dp" />

    <EditText
        android:id="@+id/genreSelectFieldButton"
        android:layout_width="263dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/genreSelectField"
        android:inputType="text"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/primary_button"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="355dp" />

    <TextView
        android:id="@+id/tagsCheckboxText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tagsText"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="419dp" />

    <EditText
        android:id="@+id/tagsCheckboxFieldButton"
        android:layout_width="263dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/tagsCheckboxField"
        android:inputType="text"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/primary_button"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="447dp" />

    <TextView
        android:id="@+id/releaseDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateText"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="489dp" />

    <EditText
        android:id="@+id/releaseDateTextFieldButton"
        android:layout_width="263dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/releaseDateTextField"
        android:inputType="text"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/primary_button"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="524dp" />

    <Button
        android:id="@+id/publishButton"
        android:layout_width="126dp"
        android:layout_height="50dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/secondary_button"
        android:text="@string/publishText"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/homeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/hbhv3"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#473C3C3C"
        app:layout_constraintBottom_toBottomOf="@+id/homeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoPicture"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/searchButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/searchButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/homeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/search"
        app:tint="#9CFFFFFF" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/homeButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/profileButton"
        app:layout_constraintStart_toEndOf="@+id/searchButton"
        app:srcCompat="@drawable/home"
        app:tint="@color/primary_button" />

    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="#00990202"
        android:contentDescription="@string/profileButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/homeButton"
        app:srcCompat="@drawable/profile"
        app:tint="#9CFFFFFF" />

</androidx.constraintlayout.widget.ConstraintLayout>