<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitySettingsAccount"
    android:background="@color/primary_background">

    <TextView
        android:id="@+id/modificationStatusText"
        android:layout_width="254dp"
        android:layout_height="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/accountText"
        android:textColor="@color/secondary_text"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/searchButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoPicture"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/usernameFieldButton"
        android:layout_width="210dp"
        android:layout_height="28dp"
        android:layout_marginTop="40dp"
        android:text="@string/changePseudoText"
        android:textColor="@color/primary_text"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/searchButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoPicture"
        app:layout_constraintVertical_bias="0.088" />

    <Button
        android:id="@+id/changeUsernameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondary_button"
        android:text="@string/changeApplyText"
        android:textColor="@color/black"
        app:iconTint="@color/secondary_button"
        app:layout_constraintBottom_toTopOf="@+id/hbhv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoPicture"
        app:layout_constraintVertical_bias="0.354" />

    <Button
        android:id="@+id/changePasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondary_button"
        android:text="@string/changeApplyText"
        android:textColor="@color/black"
        app:iconTint="@color/secondary_button"
        app:layout_constraintBottom_toTopOf="@+id/hbhv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoPicture"
        app:layout_constraintVertical_bias="0.772" />

    <Button
        android:id="@+id/deleteAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondary_button"
        android:text="@string/DeleteText"
        android:textColor="@color/black"
        app:iconTint="@color/secondary_button"
        app:layout_constraintBottom_toTopOf="@+id/hbhv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoPicture"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/usernameFieldButton"
        android:layout_width="263dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/pseudoText"
        android:inputType="text"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/primary_button"
        app:layout_constraintBottom_toTopOf="@+id/hbhv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoPicture"
        app:layout_constraintVertical_bias="0.24" />

    <EditText
        android:id="@+id/newPasswordFieldButton"
        android:layout_width="263dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/newPasswordText"
        android:inputType="text"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/primary_button"
        app:layout_constraintBottom_toTopOf="@+id/hbhv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoPicture"
        app:layout_constraintVertical_bias="0.657" />

    <TextView
        android:id="@+id/changePasswordText"
        android:layout_width="254dp"
        android:layout_height="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/changePasswordText"
        android:textColor="@color/primary_text"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/searchButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoPicture"
        app:layout_constraintVertical_bias="0.42" />

    <EditText
        android:id="@+id/oldPasswordFieldButton"
        android:layout_width="263dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/oldPasswordText"
        android:inputType="text"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/primary_button"
        app:layout_constraintBottom_toTopOf="@+id/hbhv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoPicture"
        app:layout_constraintVertical_bias="0.558" />

    <ImageView
        android:id="@+id/logoPicture"
        android:layout_width="412dp"
        android:layout_height="110dp"
        android:layout_marginBottom="572dp"
        android:adjustViewBounds="true"

        android:background="#878787"
        android:contentDescription="@string/logo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/homeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/modificationStatusText"
        android:layout_width="282dp"
        android:layout_height="42dp"
        android:layout_marginTop="40dp"
        android:text="@string/createAccountSuccessText"
        android:textColor="@color/primary_text"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/searchButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoPicture"
        app:layout_constraintVertical_bias="0.832" />

    <TextView
        android:id="@+id/deleteAccountText"
        android:layout_width="241dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:text="@string/deleteAccountText"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/searchButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoPicture"
        app:layout_constraintVertical_bias="0.907" />

    <View
        android:id="@+id/hbhv"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#473C3C3C"
        app:layout_constraintBottom_toBottomOf="@+id/homeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoPicture"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/searchButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/searchButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/homeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/search"
        app:tint="#9CFFFFFF" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/homeButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/profileButton"
        app:layout_constraintStart_toEndOf="@+id/searchButton"
        app:srcCompat="@drawable/home"
        app:tint="@color/primary_button" />

    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="#00990202"
        android:contentDescription="@string/profileButton"
        android:onClick="profileClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/homeButton"
        app:srcCompat="@drawable/profile"
        app:tint="@color/secondary_button" />

</androidx.constraintlayout.widget.ConstraintLayout>