<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    tools:context=".SearchActivity">


    <ImageView
        android:id="@+id/logoPicture"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:adjustViewBounds="true"

        android:background="#878787"
        android:contentDescription="@string/logo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/homeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/searchPicture"
        android:layout_width="59dp"
        android:layout_height="53dp"
        app:tint="@color/primary_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoPicture"
        app:srcCompat="@drawable/search" />

    <EditText
        android:id="@+id/searchField"
        android:layout_width="295dp"
        android:layout_height="53dp"
        android:layout_marginStart="2dp"
        android:ems="10"
        android:hint="@string/searchText"
        android:inputType="text"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/primary_button"
        app:layout_constraintEnd_toStartOf="@+id/confirmSearchButton"
        app:layout_constraintStart_toEndOf="@+id/searchPicture"
        app:layout_constraintTop_toBottomOf="@+id/logoPicture" />

    <ImageButton
        android:id="@+id/confirmSearchButton"
        android:layout_width="56dp"
        android:layout_height="52dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/secondary_button"
        android:contextClickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoPicture"
        app:srcCompat="@android:drawable/ic_media_play"
        app:tint="@color/black" />

    <Button
        android:id="@+id/TitleButtonSearch"
        android:layout_width="205dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/secondary_button"
        android:text="@string/titleTextSearch"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/searchList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchPicture" />

    <Button
        android:id="@+id/PeopleButtonSearch"
        android:layout_width="205dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/primary_button"
        android:text="@string/peopleTextSearch"
        android:textAlignment="gravity"
        app:layout_constraintBottom_toTopOf="@+id/searchList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmSearchButton" />

    <ListView
        android:id="@+id/searchList"
        android:layout_width="410dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/hbhv5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleButtonSearch" />

    <ImageButton
        android:id="@+id/searchButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/searchButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/homeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/search"
        app:tint="@color/secondary_button" />

    <View
        android:id="@+id/hbhv5"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#473C3C3C"
        app:layout_constraintBottom_toBottomOf="@+id/homeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoPicture"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/homeButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/profileButton"
        app:layout_constraintStart_toEndOf="@+id/searchButton"
        app:srcCompat="@drawable/home"
        app:tint="@color/primary_button" />

    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="#00990202"
        android:contentDescription="@string/profileButton"
        android:onClick="profileClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/homeButton"
        app:srcCompat="@drawable/profile"
        app:tint="@color/primary_button" />

</androidx.constraintlayout.widget.ConstraintLayout>